# VEGA

./: .gitattributes  .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ProjectUtils.cmake  VEGA.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  errors.txt  fix_lines.py  fix_lines2.py  fix_submodules.py  imgui.ini  premake5.lua  readme.md  restore_sources.py
UHE/: CMakeLists.txt
UHE/src/: UHE.h  uhepch.cpp  uhepch.h
UHE/src/Platform/OpenGL/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
UHE/src/Platform/Vulkan/: ImageView_vk.cpp  ImageView_vk.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  SwapChain_vk.cpp  SwapChain_vk.h  VulkanContext.cpp  VulkanContext.h  VulkanDesicptorPool.cpp  VulkanDesicptorPool.h  VulkanGraphicPipeline.cpp  VulkanGraphicPipeline.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTextureManagar.cpp  VulkanTextureManagar.h  Vulkanctx.h  context_vk.cpp  context_vk.h  instance_vk.cpp  instance_vk.h  vulkanctx..h
UHE/src/Platform/Windows/: WindowInput.cpp  WindowPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
UHE/src/UHE/AssestsManager/: VfsSystem.cpp  VfsSystem.h
UHE/src/UHE/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  UIID.cpp  UIID.h  Window.h  input.h  keyCodes.h
UHE/src/UHE/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
UHE/src/UHE/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLogsink.h
UHE/src/UHE/Math/: Math.cpp  Math.h
UHE/src/UHE/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SlangCompiler.cpp  SlangCompiler.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
UHE/src/UHE/Renderer2D/: OrthographicCamera.cpp  OrthographicCamera.h  OrthograpicCameraContoroller.cpp  OrthograpicCameraContoroller.h  Renderer2D.cpp  Renderer2D.h  SubTexture2D.cpp  SubTexture2D.h
UHE/src/UHE/Renderer3D/: Renderer3D.cpp  Shape.h
UHE/src/UHE/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
UHE/src/UHE/Utils/: PlatfromUtils.h
UHE_EDITOR/: CMakeLists.txt
UHE_EDITOR/assets/scene/: as.unhuman  box2d.unhuman  box2d_test.unhuman  cube.unhuman  lily.unhuman  lilyCube.unhuman  runtest.unhuman  testfor.unhuman
UHE_EDITOR/assets/shaders/: Texture.frag.glsl  Texture.frag.spv  Texture.glsl  Texture.vert.glsl
UHE_EDITOR/src/: Editor.cpp  Editor.h  app.cpp  tempCodeRunnerFile.cpp
UHE_EDITOR/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierachyPanel.cpp  SceneHierachyPanel.h
VEGA/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VEGA.vcxproj  VEGA.vcxproj.filters  cmake_install.cmake  cpp.hint  imgui.ini
VEGA/src/: VEGA.h  vgpch.cpp  vgpch.h
VEGA/src/Platform/OpenGL/: FrameBufferOpenGL.cpp  FrameBufferOpenGL.h  ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
VEGA/src/Platform/Vulkan/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  context_vk.cpp  context_vk.h
VEGA/src/Platform/Windows/: WindowInput.cpp  WindowInput.h  WindowPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
VEGA/src/VEGA/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthograpicCameraContoroller.cpp  OrthograpicCameraContoroller.h  Window.h  input.h  keyCodes.h  mouseButtonCodes.h
VEGA/src/VEGA/AssestsManager/: VfsSystem.cpp  VfsSystem.h
VEGA/src/VEGA/Core/: Application.cpp  Application.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Timestep.h  Window.h  input.h
VEGA/src/VEGA/Debug/: MemoryProfile.cpp  MemoryProfile.h  instrumentor.h
VEGA/src/VEGA/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VEGA/src/VEGA/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLogsink.h
VEGA/src/VEGA/Math/: Math.cpp  Math.h
VEGA/src/VEGA/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.cpp  (+17 more)
VEGA_EDITOR/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  VEGA_EDITOR.vcxproj  VEGA_EDITOR.vcxproj.filters  cmake_install.cmake  imgui.ini
VEGA_EDITOR/assests/shaders/: Texture.glsl  Texture.slang  flatSquare.glsl
VEGA_EDITOR/assets/model/: greengirl.fbx
VEGA_EDITOR/assets/scene/: lilyCube.vega  surface.vega
VEGA_EDITOR/assets/shaders/: Texture.frag.glsl  Texture.frag.spv  Texture.glsl  Texture.slang  Texture.vert.glsl  Texture.vert.spv
VEGA_EDITOR/src/: Editor.cpp  Editor.h  app.cpp
VEGA_EDITOR/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierachyPanel.cpp  SceneHierachyPanel.h
sandbox/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sandbox.vcxproj.filters  VegaProfile.Shutdown.josnshutdown.json  VegaProfile.Startup.josnstartup.json  VegaProfile.runtime.josnRuntime.json  cmake_install.cmake  imgui.ini  sandbox.vcxproj
sandbox/assests/shaders/: Texture.glsl  Texuture.glsl
sandbox/src/: ParticleSystem.cpp  ParticleSystem.h  sandbox.cpp  sandbox2D.cpp  sandbox2D.h
(+96 files in other folders)
